force-app/main/default/objects/Present_Issues__c/Present_Issues__c.object-meta.xml
<CustomObject>
    <label>Presenting Issues</label>
    <nameField>
        <displayFormat>ISN-{yy}{mm}{dd}-{00}</displayFormat>
        <label>Issue No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presenting Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>