force-app/main/default/objects/Present_Issues__c/fields/Case_File_No__c.field-meta.xml
<CustomField>
    <fullName>Case_File_No__c</fullName>
    <label>Case File No.</label>
    <referenceTo>Case_File__c</referenceTo>
    <relationshipName>Present_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>