force-app/main/default/objects/Present_Issues__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <inlineHelpText>Please enter the date the issue was closed. Closed can be due to different reasons, resolving it is one of them.</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>