force-app/main/default/objects/Present_Issues__c/fields/Description_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Closure__c</fullName>
    <label>Description for Closure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>