force-app/main/default/objects/Present_Issues__c/fields/Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Name__c</fullName>
    <label>Issue Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Spousal Relationship</fullName>
            </value>
            <value>
                <fullName>Family Relationship</fullName>
            </value>
            <value>
                <fullName>Psychosocial</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Learning</fullName>
            </value>
            <value>
                <fullName>Emotional</fullName>
            </value>
            <value>
                <fullName>Other issue</fullName>
            </value>
            <value>
                <fullName>Attitude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>