force-app/main/default/objects/Present_Issues__c/fields/Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Status__c</fullName>
    <label>Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reported</fullName>
                <color>#FFFF66</color>
                <default>true</default>
                <label>Reported</label>
            </value>
            <value>
                <fullName>Improving</fullName>
                <color>#78C953</color>
                <label>Improving</label>
            </value>
            <value>
                <fullName>Regressing</fullName>
                <color>#FF0000</color>
                <label>Regressing</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <color>#0B6FCE</color>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Stuck</fullName>
                <color>#FF9900</color>
                <label>Stuck</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>