force-app/main/default/objects/Present_Issues__c/fields/Reason_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closure__c</fullName>
    <label>Reason for Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
            <value>
                <fullName>Not Proceeding</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>