force-app/main/default/objects/Present_Issues__c/recordTypes/ISS_Issues.recordType-meta.xml
<RecordType>
    <fullName>ISS_Issues</fullName>
    <active>true</active>
    <description>This record type is used by ISS</description>
    <label>ISS - Issues</label>
</RecordType>